@@ -1,9 +1,10 @@
 import unittest
-from zope.testing.doctestunit import DocFileSuite
+from zope.component import provideUtility
+from zope.testing import doctest, cleanup
+from plone.keyring.interfaces import IKeyManager
 
 # Set the secret and test time to constants to keep the tests workable
 import collective.captcha.browser.captcha as captcha
-captcha.SEKRIT = 'tests-only-stable-value'
 captcha._TEST_TIME = 5
 
 class DummyRequest(object):
@@ -38,9 +39,20 @@ class DummyContext(object):
     def absolute_url(self):
         return 'dummyurl'
 
+class DummyKeyManager(object):
+    def secret(self):
+        return 'tests-only-stable-value'
+
+def captchaSetUp(test):
+    provideUtility(DummyKeyManager(), IKeyManager)
+
+def tearDown(test):
+    cleanup.cleanUp()
+
 def test_suite():
     return unittest.TestSuite((
-        DocFileSuite('captcha.txt', globs=globals()),
+        doctest.DocFileSuite('captcha.txt', globs=globals(),
+                             setUp=captchaSetUp, tearDown=tearDown),
         ))
 
 if __name__ == '__main__':
