@@ -5,6 +5,8 @@ collective.captcha changes
 1.4 (svn/unreleased)
 --------------------
 
+- Switched to using plone.keyring to provide the secret.
+
 1.3 (2008-02-22)
 ----------------
 
